Fix post-meta vertical align

--- a/main.css
+++ b/main.css
@@ -97,7 +97,6 @@ h4 {
   text-transform: uppercase;
   color: #AAA;
   line-height: 24px;
-  margin-top: 7px;
   margin-bottom: 0;
 }
 
